Desarrollo del sitio.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="light">
     {{> shared/head}}
-    {{{body}}}
+    <body>
+        {{{body}}}
+        <script src="./javascripts/bootstrap.bundle.min.js" defer></script>
+    </body>
 </html>
