--- a/views/partials/shared/head.handlebars
+++ b/views/partials/shared/head.handlebars
@@ -4,7 +4,17 @@
     <meta name="description"
           content="Ejercicios desarrollados en el curso de introducción a la programación en JavaScript por Grover Vásquez.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introducción a la Programación con JavaScript</title>
+    
+    <title>Udemy - Introducción a la programación con JavaScript</title>
+    
     <link rel="icon" type="image/png" href="./images/favicon.png" sizes="32x32">
-    <link rel="stylesheet" type="text/css" href="./stylesheets/site.min.css" media="screen" preload>
+    <link rel="preload" as="style" href="./stylesheets/bootstrap.min.css" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" as="style" href="./stylesheets/bootstrap-icons.min.css" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" as="style" href="./stylesheets/style.min.css" onload="this.onload=null;this.rel='stylesheet'">
+    
+    <noscript>
+        <link rel="stylesheet" type="text/css" href="./stylesheets/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="./stylesheets/bootstrap-icons.min.css">
+        <link rel="stylesheet" type="text/css" href="./stylesheets/style.min.css">
+    </noscript>
 </head>
