--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -3,6 +3,6 @@
     {{> shared/head}}
     <body>
         {{{body}}}
-        <script src="./javascripts/bootstrap.bundle.min.js" defer></script>
+        <script src="./js/bootstrap.bundle.min.js" defer></script>
     </body>
 </html>
